src/objects/jj_rb_Rebate_Product__c.object
<CustomObject>
    <description>Information of the products sold to Retailers and homecare providers are stored here. A separate custom object created for products, as this application is a potential candidate for migration to iConnect and to minimize the impact on the standard Product object in iConnect.</description>
    <fields>
        <fullName>jj_rb_Description__c</fullName>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>jj_rb_IMS_Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>IMS Product ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_EAN_Code__c</fullName>
        <description>SKU Number of the product from SAP.</description>
        <externalId>true</externalId>
        <label>SAP EAN Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jj_rb_SAP_Material_Number__c</fullName>
        <description>Material No of the product from SAP</description>
        <externalId>true</externalId>
        <label>SAP Material No</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>jj_rb_Unit_of_Measure__c</fullName>
        <description>Unit of measure of the product.</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Piece</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>jj_rb_VAT_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VAT Code</label>
        <referenceTo>jj_rb_VAT_Code__c</referenceTo>
        <relationshipLabel>Rebate Products</relationshipLabel>
        <relationshipName>Rebate_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rebate Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>jj_rb_Description__c</columns>
        <columns>jj_rb_SAP_Material_Number__c</columns>
        <columns>jj_rb_SAP_EAN_Code__c</columns>
        <columns>jj_rb_VAT_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Rebate Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rebate Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>jj_rb_SAP_EANCode_is_numeric</fullName>
        <active>true</active>
        <description>SAP EAN Code should be numeric.</description>
        <errorConditionFormula>!isnumber( jj_rb_SAP_EAN_Code__c)</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_EAN_Code__c</errorDisplayField>
        <errorMessage>SAP EAN Code should be numeric.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>jj_rb_SAP_MaterialNo_is_numeric</fullName>
        <active>true</active>
        <description>SAP Material No. should be numeric.</description>
        <errorConditionFormula>!isnumber(jj_rb_SAP_Material_Number__c )</errorConditionFormula>
        <errorDisplayField>jj_rb_SAP_Material_Number__c</errorDisplayField>
        <errorMessage>SAP Material No. should be numeric.</errorMessage>
    </validationRules>
</CustomObject>